--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Rokkitt', serif;
 }
 
 a {
@@ -25,6 +25,58 @@ a:hover {
 .site-header {
 	background: #fff;
 	z-index: 9;
+}
+
+.title {
+	margin-bottom: 60px;
+	font-size: 34px;
+}
+
+.dropdown {
+    position: relative;
+    /*display: inline-block;*/
+}
+
+.dropdown p {
+	font-size: 18px;
+}
+
+.dropdown p:hover {
+	cursor: default;
+}
+
+.dropdown-content:hover .dropdown {
+	color: #e6c3a3;
+}
+
+.dropdown-content {
+   /* display: none;*/
+    position: absolute;
+    z-index: 1;
+    line-height: 8px;
+    opacity: 0;
+    margin-top: -400px;
+    font-size: 14px;
+}
+
+.dropdown:hover .dropdown-content {
+	display: block;
+	margin-left: 80px;
+	margin-top: -3.3em;
+	opacity: 1;
+    transition: opacity 1s ease;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 10px 10px;
+    text-decoration: none;
+    display: block;
+    margin: 5px;
+}
+
+.dropdown-content a:hover {
+	color: #e6c3a3;
 }
 
 
