--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
 	font-family: 'Rokkitt', serif;
+	margin: 0px;
 }
 
 a {
@@ -11,6 +12,16 @@ a:hover {
 	color: #e6c3a3;
 }
 
+button {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+}
+
 @media (min-width: 951px) {
 	.site-header {
 		position: fixed;
@@ -20,7 +31,60 @@ a:hover {
 		height: 100%;
 		padding: 1rem 2rem 0;
 	}
+	.phone-header {
+		display: none;
+	}
+	.phone-header2 {
+		display: none;
+	}
 }
+
+@media (max-width: 950px) {
+	.site-header {
+		display: none;
+	}
+	.phone-header {
+		display: block;
+		position: fixed;
+		top: 0;
+		text-align: center;
+		width: 100%;
+		background-color: white;
+		min-height: 50px;
+	}
+	.furled {
+		display:flex;
+		flex-direction: row;
+		flex-wrap: nowrap;
+		justify-content: space-between;
+	}
+	.topright {
+		position: fixed;
+		top: 10px;
+		right: 10px;
+    }
+	.topleft {
+		position: fixed;
+		top: 10px;
+		left: 10px;
+		margin: 0;
+	}
+}
+
+.phone-header2 {
+		display: none;
+}
+.mobilenav {
+		list-style: none;
+		line-height: 40px;
+		font-size: 28px;
+		display: flex;
+		flex-direction: column;
+}
+.lifestyle {
+	display: none;
+}
+
 
 .site-header {
 	background: #fff;
@@ -61,10 +125,10 @@ a:hover {
 
 .dropdown:hover .dropdown-content {
 	display: block;
-	margin-left: 85px;
+	margin-left: 90px;
 	margin-top: -3.3em;
 	opacity: 1;
-    transition: opacity 1s ease;
+    transition: opacity 1.4s ease;
 }
 
 .dropdown-content a {
@@ -97,18 +161,33 @@ a:hover {
 		margin-left: 250px;
 		margin-top: 0;
 	}
+	.photo img {
+	max-width: 65vw;
+	width: 100%;
+	height: auto;	
+	margin: 40px 50px 40px 50px;
+	
+	/*display: flex;*/
+/*	flex: 0 1 auto;*/
+	}
+}
+@media (max-width: 950px) {
+	.photos {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		white-space: nowrap;
+	}
+
+	.photos img {
+		width:950px;
+		height: auto;
+		max-width: 100vw;
+	}
 }
 
-.photos {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	white-space: nowrap;
-}
-
-.photo {
-	width: 100%;	
-	margin: 2em;
-	display: flex;
-	flex: 0 1 auto;
+@media (min-width: 951px) {
+	.mobilenav {
+		display: none;
+	}
 }
