--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,54 @@ button {
 	}
 }
 
+@media only screen and (max-device-width: 950px) {
+	.site-header {
+		display: none;
+	}
+	.phone-header {
+		display: block;
+		position: fixed;
+		top: 0;
+		text-align: center;
+		width: 100%;
+		background-color: white;
+		min-height: 50px;
+	}
+	.furled {
+		display:flex;
+		flex-direction: row;
+		flex-wrap: nowrap;
+		justify-content: space-between;
+	}
+	.topright {
+		position: fixed;
+		top: 10px;
+		right: 10px;
+    }
+	.topleft {
+		position: fixed;
+		top: 10px;
+		left: 10px;
+		margin: 0;
+	}
+}
+
+@media only screen and (max-device-width: 950px) {
+	.photos {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		white-space: nowrap;
+		margin-left: 0px;
+	}
+
+	.photos img {
+		width:950px;
+		height: auto;
+		max-width: 100vw;
+	}
+}
+
 .phone-header2 {
 		display: none;
 }
@@ -206,5 +254,21 @@ button {
 @media (min-width: 951px) {
 	.mobilenav {
 		display: none;
+	}
+}
+
+@media only screen and (max-device-width: 950px) {
+	.photos {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		white-space: nowrap;
+		margin-left: 0px;
+	}
+
+	.photos img {
+		width:950px;
+		height: auto;
+		max-width: 100vw;
 	}
 }
