--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,7 @@ button {
 		width: 100%;
 		background-color: white;
 		min-height: 50px;
+		z-index: 9999;
 	}
 	.furled {
 		display:flex;
@@ -85,13 +86,15 @@ button {
 		text-align: center;
 		width: 100%;
 		background-color: white;
-		min-height: 50px;
+		min-height: 100px;
+		z-index: 9999;
 	}
 	.furled {
 		display:flex;
 		flex-direction: row;
 		flex-wrap: nowrap;
 		justify-content: space-between;
+		margin-bottom: 20px;
 	}
 	.topright {
 		position: fixed;
@@ -103,24 +106,11 @@ button {
 		top: 10px;
 		left: 10px;
 		margin: 0;
+		font-size: 60px;
 	}
 }
 
-@media only screen and (max-device-width: 950px) {
-	.photos {
-		display: flex;
-		flex-direction: row;
-		flex-wrap: wrap;
-		white-space: nowrap;
-		margin-left: 0px;
-	}
 
-	.photos img {
-		width:950px;
-		height: auto;
-		max-width: 100vw;
-	}
-}
 
 .phone-header2 {
 		display: none;
@@ -264,12 +254,15 @@ button {
 		flex-wrap: wrap;
 		white-space: nowrap;
 		margin-left: 0px;
+		margin-top: 0px;
+		z-index: -1;
 	}
 
 	.photos img {
 		width:950px;
 		height: auto;
 		max-width: 100vw;
+		margin: 0px 30px 30px 30px;
 	}
 	.mobilenav {
 		list-style: none;
@@ -277,5 +270,10 @@ button {
 		font-size: 28px;
 		display: flex;
 		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+	.icon {
+		height: 70px;
 	}
 }
