--- a/styles.css
+++ b/styles.css
@@ -98,13 +98,13 @@ button {
 	}
 	.topright {
 		position: fixed;
-		top: 10px;
-		right: 10px;
+		top: 15px;
+		right: 15px;
     }
 	.topleft {
 		position: fixed;
-		top: 10px;
-		left: 10px;
+		top: 15px;
+		left: 15px;
 		margin: 0;
 		font-size: 60px;
 	}
@@ -266,12 +266,13 @@ button {
 	}
 	.mobilenav {
 		list-style: none;
-		line-height: 40px;
+		line-height: 80px;
 		font-size: 28px;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
+		font-size: 60px;
 	}
 	.icon {
 		height: 70px;
