--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ button {
 		text-align: center;
 		width: 100%;
 		background-color: white;
-		min-height: 100px;
+		min-height: 10em;
 		z-index: 9999;
 	}
 	.furled {
@@ -99,14 +99,14 @@ button {
 	.topright {
 		position: fixed;
 		top: 15px;
-		right: 15px;
+		right: 30px;
     }
 	.topleft {
 		position: fixed;
 		top: 15px;
-		left: 15px;
+		left: 30px;
 		margin: 0;
-		font-size: 60px;
+		font-size: 8em;
 	}
 }
 
@@ -264,16 +264,16 @@ button {
 	}
 	.mobilenav {
 		list-style: none;
-		line-height: 130px;
+		line-height: 150px;
 		font-size: 28px;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
-		font-size: 60px;
+		font-size: 100px;
 		min-height: 100vh;
 	}
 	.icon {
-		height: 70px;
+		height: 8em;
 	}
 }
