mobile first pic better

--- a/styles.css
+++ b/styles.css
@@ -252,7 +252,7 @@ button {
 		flex-wrap: wrap;
 		white-space: nowrap;
 		margin-left: 0px;
-		margin-top: 0px;
+		margin-top: 10em;
 		z-index: -1;
 	}
 
