--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,8 @@ a {
 }
 
 a:hover {
-	color: #e6c3a3;
+	/*color: #e6c3a3;*/
+	color: #FE697B;
 }
 
 button {
@@ -123,6 +124,7 @@ button {
 		font-size: 28px;
 		display: flex;
 		flex-direction: column;
+		margin: 0;
 }
 .lifestyle {
 	display: none;
@@ -167,7 +169,7 @@ button {
 }
 
 .dropdown-content:hover {
-	color: #e6c3a3;
+	color: #FE697B
 }
 
 .dropdown-content {
@@ -185,7 +187,7 @@ button {
 	margin-left: 90px;
 	margin-top: -3.3em;
 	opacity: 1; 
-	transition: opacity 1.3s ease;
+	transition: opacity 2s ease;
 	 
 }
 
@@ -198,7 +200,7 @@ button {
 }
 
 .dropdown-content a:hover {
-	color: #e6c3a3;
+	color: #FE697B
 }
 
 .active {
@@ -293,4 +295,22 @@ button {
 		margin-top: 2em;
 	}
 
+.insta-icon {
+	width: 32px;
+	height: 32px;
+	margin-top: 15px;
+	margin-left: -4px;
+	transition-property: all;
+	transition-duration: 100ms;
+}
+
+.insta-icon:hover {
+	transform: scale(1.2) rotate(0.0001deg);
+}
+
+.mob-icon {
+	height: 2em;
+	margin-top: .5em;
+	margin-bottom: 1em;
+}
 
