--- a/styles.css
+++ b/styles.css
@@ -350,9 +350,6 @@ button {
 		align-items: center;
 		justify-content: center;
 	}
-	.contact-text {
-
-	}
 	.contact-pic {
 		width: 100vw;
 	}
@@ -364,6 +361,11 @@ button {
 		flex-direction: column;
 		align-items: center;
 		justify-content: center;
+		height: 100vh;
+		margin-top: 10em;
+	}
+	.contact-text {
+		font-size: 4em;
 	}
 	.insta-icon {
 		display: none;
