--- a/styles.css
+++ b/styles.css
@@ -123,6 +123,7 @@ button {
 		line-height: 40px;
 		font-size: 28px;
 		display: flex;
+		text-align: center;
 		flex-direction: column;
 		margin: 0;
 }
